--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <nav>
+    <nav class="color-fondo-del-menu">
         <ul class="alinear">
             <li>
                 <a href="#">
