--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>replica-pagina</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./estilos/estilos-replica.css">
 </head>
 
@@ -12,9 +13,12 @@
     <nav class="color-fondo-del-menu">
         <ul class="alinear">
             <li>
-                <a href="#">
+                <span class=" text">
                     INICIO
-                </a>
+                </span>
+                <span class="icono">
+                    <i class="fa fa-home" aria-hidden="true"></i>
+                </span>
             </li>
             <li>
                 <a href="#">
