--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 
 <body>
-    <nav class="color-fondo-del-menu">
+    <nav id="menu" class="color-fondo-del-menu overlay">
         <ul class="alinear">
             <li>
                 <span class=" text">
                     INICIO
                 </span>
-                <span class="icono">
+                <span class="icono" onclick="openNav()">
                     <i class="fa fa-home" aria-hidden="true"></i>
                 </span>
             </li>
             <li>
-                <a href="#">
+                <a href="#" onclick="closeNav()">
                     LA ESCUELA
                 </a>
             </li>
