--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
 <body>
     <nav id="menu" class="color-fondo-del-menu overlay">
+        <div class="centrar-boton-menu">
+            <div class="boton-menu"></div>
+            <div class="boton-menu"></div>
+            <div class="boton-menu"></div>
+        </div>
         <ul class="alinear">
             <li>
                 <span class=" text">
