--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
 
 <head>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>replica-pagina</title>
+    <link href="https://fonts.googleapis.com/css2?family=Italiana&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Tenali+Ramakrishna&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./estilos/estilos-replica.css">
 </head>
@@ -18,8 +21,8 @@
         </div>
         <ul class="alinear">
             <li>
-                <span class=" text">
-                    INICIO
+                <span class=" text tipo-de-letra-menu">
+                    LOGO
                 </span>
                 <span class="icono" onclick="openNav()">
                     <i class="fa fa-home" aria-hidden="true"></i>
@@ -27,39 +30,27 @@
             </li>
             <li>
                 <a href="#" onclick="closeNav()">
-                    LA ESCUELA
+                    ABOUT
                 </a>
             </li>
             <li>
                 <a href="#">
-                    LOS OFICIOS
+                    TEMPLATES
                 </a>
             </li>
             <li>
                 <a href="#">
-                    EN IMÁGENES
+                    BLOG
                 </a>
             </li>
             <li>
                 <a href="#">
-                    INSCRIPCIONES
+                    CONTACT
                 </a>
             </li>
-            <li>
-                <a href="#">
-                    CONTACTO
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    BIBLIOTECA
-                </a>
-            </li>
-            <li>
-                <a href="#" class="eliminar-linea">
-                    PORTAL EDUCATIVO
-                </a>
-            </li>
+
+
+
 
         </ul>
     </nav>
