--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
 
 <body>
     <nav id="menu" class="color-fondo-del-menu overlay">
-        <div class="centrar-boton-menu">
-            <div class="boton-menu"></div>
-            <div class="boton-menu"></div>
-            <div class="boton-menu"></div>
-        </div>
+
         <ul class="alinear">
             <li>
                 <span class=" text tipo-de-letra-menu">
@@ -27,28 +23,38 @@
                 <span class="icono" onclick="openNav()">
                     <i class="fa fa-home" aria-hidden="true"></i>
                 </span>
-            </li>
-            <li>
-                <a href="#" onclick="closeNav()">
-                    ABOUT
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    TEMPLATES
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    BLOG
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    CONTACT
-                </a>
-            </li>
 
+            </li>
+            <div>
+                <li>
+                    <a href="#" onclick="closeNav()">
+                        ABOUT
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        TEMPLATES
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        BLOG
+                    </a>
+                </li>
+                <li>
+                    <a href="#">
+                        CONTACT
+                    </a>
+                </li>
+                <li>
+            </div>
+            <div class="centrar-boton-menu" onclick="openNav()">
+
+                <div class="boton-menu"></div>
+                <div class="boton-menu"></div>
+                <div class="boton-menu"></div>
+            </div>
+            </li>
 
 
 
