--- a/index.html
+++ b/index.html
@@ -13,52 +13,68 @@
 </head>
 
 <body>
-    <nav id="menu" class="color-fondo-del-menu overlay">
-
+    <nav id="menu" class="color-fondo-del-menu overlay alinear-2">
+        <span class=" text tipo-de-letra-menu">
+            LOGO
+        </span>
         <ul class="alinear">
+
             <li>
-                <span class=" text tipo-de-letra-menu">
-                    LOGO
-                </span>
-                <span class="icono" onclick="openNav()">
-                    <i class="fa fa-home" aria-hidden="true"></i>
-                </span>
-
+                <a href="#" onclick="closeNav()">
+                    ABOUT
+                </a>
             </li>
-            <div>
-                <li>
-                    <a href="#" onclick="closeNav()">
-                        ABOUT
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        TEMPLATES
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        BLOG
-                    </a>
-                </li>
-                <li>
-                    <a href="#">
-                        CONTACT
-                    </a>
-                </li>
-                <li>
-            </div>
-            <div class="centrar-boton-menu" onclick="openNav()">
-
-                <div class="boton-menu"></div>
-                <div class="boton-menu"></div>
-                <div class="boton-menu"></div>
-            </div>
+            <li>
+                <a href="#">
+                    TEMPLATES
+                </a>
             </li>
-
+            <li>
+                <a href="#">
+                    BLOG
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    CONTACT
+                </a>
+            </li>
 
 
         </ul>
+        <div class="centrar-boton-menu" onclick="openNav()">
+
+            <div class="boton-menu"></div>
+            <div class="boton-menu"></div>
+            <div class="boton-menu"></div>
+            <span>
+                <ul class="alinear-1">
+
+                    <li>
+                        <a href="#" onclick="closeNav()">
+                            ABOUT
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            TEMPLATES
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            BLOG
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            CONTACT
+                        </a>
+                    </li>
+
+
+                </ul>
+            </span>
+        </div>
     </nav>
 
 
