--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav id="menu" class="color-fondo-del-menu overlay alinear-2">
+    <nav id="menu" class="color-fondo-del-menu overlay alinear-2 alinear">
         <span class=" text tipo-de-letra-menu">
             LOGO
         </span>
