--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <nav id="menu" class="color-fondo-del-menu overlay alinear-2 alinear">
+    <nav id="menu" class="color-fondo-del-menu overlay alinear-2 alinear-3">
         <span class=" text tipo-de-letra-menu">
             LOGO
         </span>
@@ -42,7 +42,7 @@
 
 
         </ul>
-        <div class="centrar-boton-menu" onclick="openNav()">
+        <div id="borrarBoton" class="centrar-boton-menu" onclick="openNav()">
 
             <div class="boton-menu"></div>
             <div class="boton-menu"></div>
