--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 
         </ul>
-        <div id="borrarBoton" class="centrar-boton-menu" onclick="openNav()">
+        <div id="boton-menu-colapsado" class="centrar-boton-menu" onclick="openNav()">
 
             <div class="boton-menu"></div>
             <div class="boton-menu"></div>
