--- a/index.html
+++ b/index.html
@@ -48,29 +48,29 @@
                 <div class="boton-menu"></div>
                 <div class="boton-menu"></div>
             </div>
-            <span>
-                <ul class="overlay">
+            <span class="block">
 
 
-                    <a href="#" onclick="closeNav()">
-                        ABOUT
-                    </a>
+
+                <a href="#" onclick="closeNav()">
+                    ABOUT
+                </a>
 
 
-                    <a href="#" onclick="closeNav()">
-                        TEMPLATES
-                    </a>
+                <a href="#" onclick="closeNav()">
+                    TEMPLATES
+                </a>
 
-                    <a href="#" onclick="closeNav()">
-                        BLOG
-                    </a>
+                <a href="#" onclick="closeNav()">
+                    BLOG
+                </a>
 
-                    <a href="#" onclick="closeNav()">
-                        CONTACT
-                    </a>
+                <a href="#" onclick="closeNav()">
+                    CONTACT
+                </a>
 
 
-                </ul>
+
             </span>
         </div>
     </nav>
