--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="./estilos/estilos-replica.css">
 </head>
 
-<body>
+<body class="">
     <nav id="menu" class="color-fondo-del-menu alinear-2 alinear-3">
         <span class=" text tipo-de-letra-menu">
             LOGO
@@ -42,13 +42,13 @@
 
 
         </ul>
-        <div class="centrar-boton-menu">
-            <div id="boton-menu-colapsado" onclick="openNav()">
+        <div class="">
+            <div id="boton" class="centrar-boton" id="boton-menu-colapsado" onclick="openNav()">
                 <div class="boton-menu"></div>
                 <div class="boton-menu"></div>
                 <div class="boton-menu"></div>
             </div>
-            <span class="block">
+            <div id="bloque" class="block">
 
 
 
@@ -71,7 +71,7 @@
 
 
 
-            </span>
+            </div>
         </div>
     </nav>
 
