--- a/index.html
+++ b/index.html
@@ -42,21 +42,16 @@
 
 
         </ul>
-        <div class="">
-            <div id="boton" class="centrar-boton" id="boton-menu-colapsado" onclick="openNav()">
+        <div class="centrar-boton-menu">
+            <div id="boton" class="centrar" id="boton-menu-colapsado" onclick="openNav()">
                 <div class="boton-menu"></div>
                 <div class="boton-menu"></div>
                 <div class="boton-menu"></div>
             </div>
             <div id="bloque" class="block">
-
-
-
                 <a href="#" onclick="closeNav()">
                     ABOUT
                 </a>
-
-
                 <a href="#" onclick="closeNav()">
                     TEMPLATES
                 </a>
